--- a/src/login.html
+++ b/src/login.html
@@ -65,7 +65,7 @@
 
 
                             <div class="row col-xs-6">
-                                <a href="/src/profile.html"<button class="btn btn-primary ml-2">Sign in</button></a>
+                                <a href="../src/profile.html"<button class="btn btn-primary ml-2">Sign in</button></a>
                             </div>
                         </div>
                     </form>
