--- a/src/login.html
+++ b/src/login.html
@@ -31,7 +31,7 @@
     <div class="row">
         <div class="col-4">
         </div>
-        <div class="col align-items-center px-3 mx-3 formbox">
+        <div class="col-sm-4 col-md-4 align-items-center px-3 mx-3 formbox">
 
             <div class="box box-info">
 
